2006-11-19 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* lib_christine/show_properties.py:
	Fixed the import fault (doesn't import discoverer) and
	the properties option was not working
2006-11-15 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* General:
	Little speed improvements
	* lib_christine/player.py:
	First upload
	* lib_christine/player:
	First Upload
	* lib_christine/player:
	First Upload
2006-11-10 Marco Antonio Islas Cruz	<markuz@islascruz.org>
	* christine:
	Tray Icon is no longer be showed by the "egg.tryicon" module
	we will use the new gtk.StatusIcon "widget?". Just to keep
	the gtk stuff in the place and adopt the new stuff just
	to avoid breaking thing in the future.
	There are some minor changes in christine.
2006-11-04 Marco Antonio Islas Crfuz <markuz@islascruz.org>
	* christine:
	Fixed a HUGE bug that let you re-import some songs if you 
	previosly filter the library model. Since the search was made in the 
	top level model the number of files change on every search.
	Using the low level model uses all the files.
2006-11-02 Marco Antonio Islas Crfuz <markuz@islascruz.org>
	* lib_christine_libs_christine.py: vis-plugin bugfix # #1589432
	* christine: go_prev improvement
				- Code cleaning
2006-11-01 Marco Antonio Islas Cruz	<markuz@islascruz.org>
	* lib_christine/libs_christine.py: vis-plugin fixup
2006-10-31 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* christine: Import files improvement
	* lib_christine/library.py: Import files improvement.
	* gui/main_window.glade: Shrink in queue list.
		- Fixed bug in search box packing method
		- Browser and View Browser menuitem hided (This will dissappear soon)
2006-08-29 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* christine: Rewrite the filter method in order to make
	the browser work. Need more tests. refilter on new artist
	selected.
	* lib_christine/libs_christine: expose_cb call on new location 
	setted.
	* gui/main_window.glade: Player space reallocated.