@@ -72,7 +72,7 @@ class Christine(GtkMisc):
 		"""
 		GtkMisc.__init__(self)
 
-		self.__Share   = Share(@datadir@)
+		self.__Share   = Share('@datadir@')
 		self.__GConf   = ChristineGconf()
 		self.__Plugins = ChristinePlugins(self)
 
